Added font family

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html,body{
+  font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
+}
 
 .social-icon{
   @apply rounded-full mx-1 p-3 text-white;
