--- a/src/index.css
+++ b/src/index.css
@@ -38,10 +38,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-html,body{
-  font-family: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
-}
 
+.mini-headline{
+  font-family: "Barlow",cursive;
+}
+html,body{
+  font-family: "Roboto" sans-serif;
+}
+a{
+  font-family: "Barlow";
+  font-weight: 700
+}
 .social-icon{
   @apply rounded-full mx-1 p-3 text-white;
 }
